# gimp-vtf

./: .gitignore  Makefile.am  autogen.sh  configure.ac  configure.in
debian/: Makefile.am  changelog  control  gimp-vtf.doc-base  rules
gimp-vtf/: Makefile.am  file-vtf-save.c  file-vtf.c  file-vtf.h
help/en/: index.html
po/: POTFILES.in  oc.po  sv.po
