## Process this file with automake to produce Makefile.in

#SUBDIRS = po gimp-vtf help
SUBDIRS = po gimp-vtf

EXTRA_DIST = \
	BUGS			\
	HACKING			\
	autogen.sh		\
        intltool-extract.in	\
        intltool-merge.in	\
        intltool-update.in

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update
